新增数据库验证登录或者注册

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,7 +1,7 @@
 OUT:=main
 SRCS:=$(wildcard *.c)
 OBJS:=$(SRCS:%.c=%.o)
-COM_OP:=-Wall -g -lpthread -lmysqlclient
+COM_OP:=-Wall -g -lpthread -lmysqlclient -lcrypt
 CC:=gcc
 
 $(OUT):$(OBJS)
