--- a/server/Makefile
+++ b/server/Makefile
@@ -1,7 +1,7 @@
 OUT:=main
 SRCS:=$(wildcard *.c)
 OBJS:=$(SRCS:%.c=%.o)
-COM_OP:=-Wall -g -lpthread -lmysqlclient -lcrypt
+COM_OP:=-Wall -g -lpthread -lmysqlclient -lcrypt -ll8w8jwt
 CC:=gcc
 
 $(OUT):$(OBJS)
